--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,19 @@ jobs:
     - run: npm run build --if-present
     - name: Build the docker image
       run: docker build . --file Dockerfile -t linkedin-post-gen:latest
+    - name: Login to ad container registry
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.AD_CR_URL }}
+        username: ${{ secrets.AD_CR_USER }}
+        password: ${{ secrets.AD_CR_PASSWORD }}
+    - name: Build and push docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./Dockerfile
+        builder: ${{ steps.buildx.outputs.name }}
+        push: true
+        tags: '${{ secrets.AD_CR_URL }}/linkedin-post-gen:latest'
+        cache-from: 'type=registry,ref=${{ secrets.AD_CR_URL }}/linkedin-post-gen:buildcache'
+        cache-to: 'type=registry,ref=${{ secrets.AD_CR_URL }}/linkedin-post-gen:buildcache,mode=max'
