--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,13 +25,14 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - name: Build the docker image
-      run: docker build . --file Dockerfile -t ${{ secrets.AD_CR_URL }}/linkedin-post-gen:latest
     - name: Login to ad container registry
       uses: docker/login-action@v1
       with:
         registry: ${{ secrets.AD_CR_URL }}
         username: ${{ secrets.AD_CR_USER }}
         password: ${{ secrets.AD_CR_PASSWORD }}
-    - name: Push the docker image
-      run: docker push ${{ secrets.AD_CR_URL }}/linkedin-post-gen:latest
+    - name: Build and push docker image
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: '${{ secrets.AD_CR_URL }}/linkedin-post-gen:latest'
